fix: Remove extra margin around body element

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,7 @@
 
 @import "~@edx/frontend-component-header/dist/index";
 @import "~@edx/frontend-component-footer/dist/footer";
+
+body {
+    margin: 0 !important;
+}
